# gemini-stock-bot

./: main.py  pyproject.toml
.github/workflows/: daily.yml
config/: template.md  tickers.json  tickers_org.json
src/: discord.py  gemini.py  main.py  news.py  stock.py
